# dkim-auth

./: .gitattributes  README.md
access-delegation/: Cargo.toml
access-delegation/src/: lib.rs
auth/: Cargo.toml
auth/src/: lib.rs
control-delegator/: Cargo.toml
control-delegator/src/: lib.rs
dkim/: Cargo.toml
dkim-auth/: Cargo.toml
dkim-auth/src/: lib.rs
dkim-controller/: .gitignore  Cargo.toml
dkim-controller/src/: access_delegator.wasm  lib.rs
dkim/src/: dns.rs  hash.rs  lib.rs  public_key.rs  result.rs  roundtrip_test.rs  sign.rs
email-relayer/: Cargo.toml
email-relayer/src/: lib.rs  main.rs
integration-tests/: Cargo.toml
integration-tests/tests/: dkim_entry.rs  lib.rs
integration-tests/tests/mailserver/: mod.rs
sender/src/: main.rs
worker/src/: lib.rs
