

[package]
name = "near-dkim-auth"
version = "0.0.1"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
mail-parser = "0.7.0"
mailparse = "0.13.7"
getrandom = { version = "0.2", features = ["custom"] }

near-dkim = { path = "../dkim"}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
