[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0.85"
native-tls = "0.2.2"
imap = "2.4.1"
itertools = "0.10.5"
workspaces = "0.7.0"

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
