[package]
name = "dkim-auth-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
bollard = "0.14.0"
email-relayer = { path = "../email-relayer" }
futures = "0.3"
regex = "1"
serde_json = "1"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
workspaces = { version = "0.7", features = ["unstable"] }
